--- a/src/main.html
+++ b/src/main.html
@@ -69,7 +69,44 @@
         </div>
     </div>
 
-    
+    <div class="text-[#2A254B]">
+        <h1 class="text-center text-[32px] mb-[30px]">New ceramics</h1>
+        <div class="flex justify-around xs:flex-col md:flex-row xs:ml-[42px]">
+            <div>
+                <img src="/Photo (2).svg">
+                <h1 class="text-[20px] mb-[10px]">The Dandy chair</h1>
+                <p>£250</p>
+            </div>
+            <div>
+                <img src="/Photo (3).svg">
+                <h1 class="text-[20px] mb-[10px]">The Dandy chair</h1>
+                <p>£250</p>
+            </div>
+            <div>
+                <img src="/Photo (4).svg">
+                <h1 class="text-[20px] mb-[10px]">The Dandy chair</h1>
+                <p>£250</p>
+            </div>
+            <div>
+                <img src="/Photo (5).svg">
+                <h1 class="text-[20px] mb-[10px]">The Dandy chair</h1>
+                <p>£250</p>
+            </div>
+        </div>
+        <button class="md:ml-[43%] xs:ml-[25%] text-white mt-[30px] w-[200px] h-[50px] bg-slate-600 mb-[50px]">View conection</button>
+    </div>
+
+    <div class="bg-[#2A254B] md:flex text-white md:justify-between mt-[50px] flex-col md:flex-row">
+        <div class="p-[30px]">
+            <h1 class="text-[32px] w-[342px] md:w-[513px]">The furniture brand for the future, with timeless designs</h1>
+            <button class="w-[200px] h-[50px] bg-gray-900 text-white mt-[50px] mb-[150px]">View collection</button>
+            <p class="text-[18px] w-[400px] md:w-[602px]">A new era in eco friendly furniture with Avelon, the French luxury retail brand
+                with nice fonts, tasteful colors and a beautiful way to display things digitally 
+                using modern web technologies.</p>
+        </div>
+        <img src="/Image Block.svg">
+    </div>
+
 
 </body>
 </html>
