--- a/src/main.html
+++ b/src/main.html
@@ -107,6 +107,40 @@
         <img src="/Image Block.svg">
     </div>
 
+    <div class="bg-[#2A254B] p-[50px] md:text-start text-center flex-col md:flex-row text-white flex justify-around">
+        <div class="flex md:flex-row xs:flex-row gap-[60px]">
+        <div>
+            <p>Menu</p>
+            <p>New arrivals</p>
+            <p>Best sellers</p>
+            <p>Recently viewed</p>
+            <p>Popular this week</p>
+            <p>All products</p>
+        </div>
+        <div>
+            <p>Categories</p>
+            <p>Crockery</p>
+            <p>Furniture</p>
+            <p>Homeware</p>
+            <p>Plant pots</p>
+            <p>Chairs</p>
+            <p>Crockery</p>
+        </div>
+        </div>
+        <div>
+            <p>Our company</p>
+            <p>About us</p>
+            <p>Vacancies</p>
+            <p>Contact us</p>
+            <p>Privacy</p>
+            <p>Returns policy</p>
+        </div>
+        <div>
+            <h1 class="text-[32px] mb-[10px]">Join our mailing list</h1>
+            <img src="/Text input (2).svg">
+        </div>
+    </div>
+
 
 </body>
 </html>
